--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <title>Estrutura de Cargos e Funções - Systems BSE</title>
+  <title>Estrutura de Cargos e Funções - Systems BSI</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     :root {
